--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   "dependencies": {
     "cookie-parser": "^1.4.5",
     "ejs": "^3.1.6",
+    "ejs-locals": "^1.0.2",
+    "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
+    "express-partials": "^0.3.0",
     "http-errors": "^1.8.0",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0"
