--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
     "express-partials": "^0.3.0",
+    "express-session": "^1.17.1",
     "http-errors": "^1.8.0",
     "method-override": "^3.0.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0"
   }
 }
